# rust_learning

./: .env  Cargo.toml  application.yml
src/: app.rs  database.rs  main.rs  server.rs
src/config/: database.rs  mod.rs  server.rs
src/entity/: account_credit.rs  mod.rs  prelude.rs  user.rs
