[package]
name = "rust-learning"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
config = { version = "0.15.11", features = ["yaml"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = { version = "1.0.98" }
sea-orm = { version = "1.1.11", features = [
    "with-chrono",
    "debug-print",
    "sqlx-mysql",
    "with-rust_decimal"
] }
